@@ -1,5 +1,6 @@
 25 August 2007
 
+* Break timer stuff off into timer.c.
 * Fix queue-high == 1 to not hang after first mail.
 
 24 August 2007
@@ -565,4 +566,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.148 2007-08-25 10:57:16 nicm Exp $
+$Id: CHANGES,v 1.149 2007-08-25 11:54:39 nicm Exp $
